crates/cueloop/tests/snapshots/queue_burndown_days2_one_open_task.snap
---
source: crates/cueloop/tests/queue_burndown_snapshot_test.rs
assertion_line: 36
expression: "test_support::normalize_for_snapshot(&stdout)"
---
Task Burndown (last 2 days)
============================

Remaining Tasks

  <DATE> | ████████████████████ 1
  <DATE> | ████████████████████ 1

█ = ~1 task
