crates/cueloop/tests/snapshots/queue_burndown_with_done_tasks.snap
---
source: crates/cueloop/tests/queue_burndown_snapshot_test.rs
assertion_line: 69
expression: "test_support::normalize_for_snapshot(&stdout)"
---
Task Burndown (last 14 days)
============================

Remaining Tasks

  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2
  <DATE> | ████████████████████ 2

█ = ~1 task
